//-*-mode:protobuf; mode:font-lock;-*-

syntax = "proto3";

import "calin.proto";

package calin.ix.math;

message Histogram1DData {
  double dxval                 = 1
    [(CFO).desc = "Bin width", (CFO).units = "xval-units" ];
  double xval_align            = 2
    [(CFO).desc = "Bin alignment, such that (x0 mod dx)=xalign",
     (CFO).units = "bins" ];
  double xval0                 = 3
    [(CFO).desc = "X-value of LHS of first bin", (CFO).units = "xval-units" ];
  repeated double bins         = 4
    [(CFO).desc = "Weights for the bins", (CFO).units = "weight-units" ];
  bool limited                 = 5
    [(CFO).desc = "Limit the histogram range" ];
  double xval_limit_lo         = 6
    [(CFO).desc = "Lower limit on X value", (CFO).units = "xval-units" ];
  double xval_limit_hi         = 7
    [(CFO).desc = "Upper limit on X value", (CFO).units = "xval-units" ];
  double overflow_lo           = 8
    [(CFO).desc = "Total weight that overflows lower limit",
     (CFO).units = "weight-units" ];
  double overflow_hi           = 9
    [(CFO).desc = "Total weight that overflows upper limit",
     (CFO).units = "weight-units" ];
  double sum_w                 = 10
    [(CFO).desc = "Total weight in histogram",
     (CFO).units = "weight-units" ];
  double sum_wx                = 11
    [(CFO).desc = "Total x-val times weight in histogram",
     (CFO).units = "weight-units xval-units" ];
  double sum_wxx               = 12
    [(CFO).desc = "Total x-val squared times weight in histogram",
     (CFO).units = "weight-units xval-units^2" ];
  string name                  = 13
    [(CFO).desc = "Name of the histogram"];
  string xval_units            = 14
    [(CFO).desc = "X-value units"];
  string weight_units          = 15
    [(CFO).desc = "Weight units"];
};
